opam-version: "2.0"
version: "4.14.1+tagl"
license: "LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception"
synopsis: "OCaml 4.13.1 with runtime tag information"
depends: [
  "ocaml" {= "4.14.1" & post}
  "base-unix" {post}
  "base-bigarray" {post}
  "base-threads" {post}
]
conflict-class: "ocaml-core-compiler"
flags: compiler
build: [
  ["./configure" "--prefix=%{prefix}%" "--enable-reserved-header-bits=26"]
  [make "-j%{jobs}%"]
]
install: [make "install"]
maintainer: "caml-list@inria.fr"
homepage: "https://github.com/ocaml/ocaml/"
bug-reports: "https://github.com/ocaml/ocaml/issues"
authors: [
  "Xavier Leroy"
  "Damien Doligez"
  "Alain Frisch"
  "Jacques Garrigue"
  "Didier Rémy"
  "Jérôme Vouillon"
]
available: arch = "x86_64" & (os = "linux" | os = "macos" | os = "win32")
